# Heimdall

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  build.sh  heimdall-scheme.excalidraw
include/: Metal.hpp  Vec3.hpp  app.h  app.hpp  args.hpp  argument-parser.hpp  camera.hpp  config.hpp  dieletric.hpp  float-types.hpp  hit-record.hpp  hitable-list.hpp  hitable.hpp  lambertian.hpp  material.hpp  ray.hpp  sphere.hpp  utils.hpp  vec-template.hpp  vec3.hpp
include/exception/: get-empty-option-exception.cpp  not-implemented-exception.hpp
src/: Vec3.cpp  app.cpp  argument-parser.cpp  config-check.cpp  main.cpp  utils.cpp
tests/: CMakeLists.txt
tests/unit-tests/: CMakeLists.txt  argument-parser-test.cpp  hitable-list-test.cpp  ray-test.cpp  run-tests.cpp  sphere-test.cpp  utils-test.cpp  vec-template-test.cpp  vec3-test.cpp
